src/objects/PANG_Partnership_Contacts__c.object
<CustomObject>
    <description>Join object relating RWE Partnerships to Contacts</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RWE Partnerships</relationshipLabel>
        <relationshipName>RWE_Partnership_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnership__c</fullName>
        <label>Partnership</label>
        <referenceTo>PANG_Partnership__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>RWE_Partnership_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RWE Partnership Contact</label>
    <nameField>
        <displayFormat>RWE-PTC-{000000000}</displayFormat>
        <label>RWE Partnership Contacts ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWE Partnership Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>